[gd_scene load_steps=2 format=3 uid="uid://lobby_uuid_001"]

[ext_resource type="Script" path="res://core/Lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "LOBBY"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
item_count = 1

[node name="BtnReady" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "READY"

[node name="OptionButtonTime" type="OptionButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "3 Minutes"
popup/item_0/id = 180
popup/item_1/text = "5 Minutes"
popup/item_1/id = 300
popup/item_2/text = "10 Minutes"
popup/item_2/id = 600

[node name="BtnStart" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "START GAME"

[node name="BtnLeave" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "LEAVE LOBBY"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnReady" to="." method="_on_btn_ready_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnLeave" to="." method="_on_btn_leave_pressed"]
